// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

03/18/2010
	r261 [pakpil]
	* Udated all Mechanic accessory.

	r260 [pakpil]
	* Fixed SC_AUTOSHADOWSPELL that wasn't removing SC_STOP when the skill fails.

	r259 [Rytech]
	*Added tags and ID's for all the latest and future status ID's in status.h.
	-They will be disabled until realy to use.
	*Updated const.txt to support all the latest existing NPC's.
	-Have fun adding those new npc's to your server's. =P
	*Added sorcerer's elemental spirit and genetic homunculus s tags and ID's to the mob_db2.
	-They will remain disabled until the sprites come out for them.
	-I dont plan on leaveing them here since they will require their own systems and database files real soon.

03/17/2010
	r258 [pakpil]
	* Fixed WM_VOICEOFSIREN that wasn't blocking use skills in the W/M under the skill effect.

	r257 [pakpil]
	* Added LG_BANISHINGPOINT skill.
	* Fixed WM_GREAT_ECHO skill damage type and SP reduction per W/M in party.
	* Fixed WL_FROSTMISTY and WL_JACKFROST casting, aftercast and cooldown time and Freezing/Freeze chances.
	* Fixed SC_FREEZING that don't affect to boss monsters.
	* Fixed WL_FROSTMISTY damage.
	* Fixed RK_SONICWAVE and RK_HUNDREDSPEAR damages.


03/15/2010
	r256 [pakpil]
	* Added missing 'breeder_3ceAM' npc in r253.
	
	r255 [pakpil]
	* Fixed WL_HELLINFERNO that was not working propertly.
	* Minor cleanup in skill_additional_effect.
	* Fixed a mistake in Thanatos Tower quest in r253. Sorry :/

	r254 [pakpil]
	* Fixed an issue in WL_READING_SB where it wasn't removing SC_STOP status when the Warlock haven't Spellbooks on the inventory.

	r253 [pakpil]
	* Fixed  some items that aren't given its bonus correctly to certain classes.
	* Fixed splash area in skill_db that were wrong. Can't remember the reporter's name, thx anyway.
	* Fixed WL_COMET adjusting its behavior to the official one.